--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ input[type='number'] {
     align-items: center;
     flex-direction: column;
     padding: 20px 0;
+    margin-top: 100px;
 }
 
 .playContainer #result-area {
