--- a/style.css
+++ b/style.css
@@ -28,7 +28,33 @@ input[type='number'] {
   -moz-appearance: textfield;
 }
 
-#container {    
+/* 스타트 화면 */
+#start-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    background-color:  rgb(119, 119, 209);
+}
+
+#start-container .start-mainText {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#start-container .start-mainText button {
+    padding:  10px 20px;
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: 2rem;
+    background-color: rgb(119, 119, 209);
+    cursor: pointer;
+}
+
+#container {   
     margin: 0 auto;
     height: 100%;
     position: relative;
@@ -63,24 +89,31 @@ input[type='number'] {
     align-items: center;
     flex-direction: column;
     padding: 20px 0;
-    margin-top: 120px;
+    margin-top: 20px;
 }
 
 .playContainer #result-area {
-    font-size: 1.2rem;
+    font-size: 2rem;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .playContainer #chance-area {
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 100;
     text-align: left;
     width: 100%;
 }
 
 #user-input {
-    margin: 0 0 20px 0;
+    margin: 0 0 5px 0;
     height: 50px;
     width: 100%;
+    font-size: 25px;
+    padding-bottom: 12px;
+    text-align: center;
     border-left: none;
     border-right: none;
     border-top: none;
