--- a/style.css
+++ b/style.css
@@ -39,19 +39,33 @@ input[type='number'] {
 
 #start-container .start-mainText {
     display: flex;
-    width: 100%;
+    width: calc(100% - 500px);
+    margin: 0 auto;
     height: 100%;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
+
+
 #start-container .start-mainText button {
-    padding:  10px 20px;
-    border: 1px solid #fff;
+    border: none;
     color: #fff;
-    font-size: 2rem;
+    font-size: 5rem;
     background-color: rgb(119, 119, 209);
     cursor: pointer;
+}
+
+.start-mainText .game-rule {
+    width: 80%;
+    font-size: 1.2rem;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 20px 30px;
+    color: #fff;
+    font-weight: 100;
+    border: 1px solid #fff;
 }
 
 #container {   
