--- a/style.css
+++ b/style.css
@@ -160,3 +160,17 @@ input[type='number'] {
     margin-right: 3px;
 }
 
+
+@media screen and (max-width: 600px) {
+    #start-container .start-mainText  {
+        width: calc(100% - 60px);
+    }
+
+    #start-container .start-mainText button {
+        font-size: 4rem;
+    }
+
+    .start-mainText .game-rule {
+        font-size: 1rem;
+    }
+}
